pathbar, gnome-tray, cinnamon calendar

--- a/Jade-1-Aqua/cinnamon/cinnamon.css
+++ b/Jade-1-Aqua/cinnamon/cinnamon.css
@@ -75,15 +75,16 @@ StScrollBar StButton#vhandle:hover
 }
 
 #Tooltip {
-    padding: 8px;
-    color: #fff;
-    border-radius: 5px;
-    box-shadow: none;
-    text-shadow: 0 1px black; 
+    border: 1px solid rgba(212,185,67,1.0);
+    border-radius: 4px;
+    padding: 2px 12px;
+    background-gradient-end: rgba(251,234,159,0.9);
+    background-gradient-start: rgba(254,245,198,0.9);
+    background-gradient-direction: vertical;
+    color: #000000;
+    font-size: 8.5pt;
+    font-weight: normal;
     text-align: center;
-    background-color: rgba(0, 0, 0, 0.8);
-    background-clip: padding-box;
-    border: 1px solid rgba(255, 255, 255, 0.1);
 }
 
 /* ===================================================================
@@ -752,7 +753,7 @@ StScrollBar StButton#vhandle:hover
 
 .calendar-month-label {
     color: #cccccc;
-    font-size: 7.5pt;
+    font-size: 9pt;
     padding-bottom: 8px;
     padding-top: 8px;
     font-weight: bold;
@@ -807,67 +808,129 @@ StScrollBar StButton#vhandle:hover
 }
 
 .calendar-day-base {
-    font-size: 7.5pt;
-    text-align: center;
-    width: 2.4em;
-    height: 2.4em;
+    font-size:9pt;
+    text-align:center;
+    width:30px;
+    height:24px;
+    border: 1px solid #5F6267;
+    background-color: #484B4E;
+    padding:3px;
+    margin:1px 1px 1px 1px;
+    border-radius:0px;
+    color:#a0b9d2;
+    text-decoration:none;
 }
 
 .calendar-day-base:hover {
-    background-color: #555555;
-    color: #fff;
+    background-color:rgba(28,113,168,0.6); /* coloraccent */
 }
 
 .calendar-day-base:active {
+    color:#ffffff;
+    background-color: #4aa0d1; /* coloraccent */
+    border-color:transparent;
 }
 
 .calendar-day-heading {
-    color: #cccccc;
-    padding-top: 1em;
+    width:30px; 
+    height: 12px; 
+    margin-top: 0.8em; 
+    padding: 3px; 
+    border: 1px solid #5F6267;
+    background-color: #484B4E;
+    color: #a0b9d2; 
+    font-weight: normal; 
+    text-align: center;
 }
 
 .calendar-week-number {
-    color: #cccccc;
+    width:24px;
+    height: 24px; 
+    margin: 1px; 
+    padding: 0.5em 0 0; 
+    border: 1px solid #5F6267;
+    background-color: #484B4E;
+    color: #a0b9d2;
+    font-weight: normal; 
+    text-align: center; 
+}
+
+
+.calendar-day { 
+    border-width: 0px;
+    background-color: rgba(0,0,0,0.6);
     font-weight: bold;
 }
 
-/* Hack used in lieu of border-collapse - see calendar.js */
-.calendar-day {
-    border: 1px solid rgba(90,90,90,1);
-    color: #cccccc;
-    border-top-width: 0;
-    border-left-width: 0;
-}
-.calendar-day-top {
-    border-top-width: 1px;
-}
-.calendar-day-left {
-    border-left-width: 1px;
+.calendar-day-top { 
+    border-top-width: 0px; 
 }
 
-.calendar-work-day {
-    background-color: rgba(30, 30, 30, 1);
+.calendar-day-left { 
+    border-left-width: 0px; 
+}
+
+.calendar-day-with-events { 
+    background-image: none; 
+    color: #00CCFF; /* coloraccent */
+}
+
+.calendar-day-with-events:hover { 
+    background-color:rgba(28,113,168,0.6); /* coloraccent */
+}
+
+.calendar-day-with-events:active, 
+.calendar-day-with-events:active:hover, 
+.calendar-day-with-events:selected, 
+.calendar-day-with-events:selected:hover { 
+    background-color: #4aa0d1; /* coloraccent */
+    border-color: transparent; 
+}
+
+.calendar-today, 
+.calendar-today.calendar-day-with-events { 
+    border: none; 
+    background-color: #4aa0d1; /* coloraccent */
+    color: #FFFFFF; 
+}
+
+.calendar-today:hover, 
+.calendar-today:focus, 
+.calendar-today.calendar-day-with-events:hover, 
+.calendar-today.calendar-day-with-events:focus { 
+    background-color: #4aa0d1; /* coloraccent */
+    color: #FFFFFF;
+}
+
+.calendar-today:selected, 
+.calendar-today:selected:hover, 
+.calendar-today.calendar-day-with-events:selected, 
+.calendar-today.calendar-day-with-events:selected:hover { 
+    background-color: #4aa0d1; /* coloraccent */ 
+    color: #FFFFFF;
 }
 
 .calendar-nonwork-day {
-    background-color: rgba(60, 60, 60, 0.5);
+    background-color: #404244;
 }
 
-.calendar-today {
-    text-shadow: black 0px 2px 2px;
-    color: #ffffff;
-    font-weight: bold;
-    background-color: #4aa0d1; /*+*/
-    box-shadow: inset 0px 0px 0px 1px rgba(120,120,120,1);
+.calendar-other-month-day { 
+    background-color: rgba(11,15,18,0.6); 
+    color: #333333; 
 }
 
-.calendar-other-month-day {
-    color: #888888;
+.calendar-other-month-day:hover, 
+.calendar-other-month-day:focus { 
+    background-color: rgba(11,15,18,0.6); 
 }
 
-.calendar-day-with-events {
-    font-weight: bold;
-    color: #cccccc;
+.calendar-other-month-day.calendar-day-with-events { 
+    color: #003366;  /* coloraccent */
+}
+
+.calendar-other-month-day.calendar-day-with-events:hover, 
+.calendar-other-month-day.calendar-day-with-events:focus { 
+
 }
 
 /* ===================================================================
@@ -2146,15 +2209,15 @@ StScrollBar StButton#vhandle:hover
     padding-left: 1px;
     padding-right: 1px;
     border: 0 solid transparent;
-    border-width: 1px;
-    border-radius: 3px;
+    border-bottom-width: 1px;
 }
 
 .panel-launchers .launcher:hover {
-    border-color: rgba(255, 255, 255, 0.7);
     background-gradient-direction: vertical;
-    background-gradient-start: rgba(255,255,255,0.5);
-    background-gradient-end: rgba(255,255,255,0.2); 
+    background-gradient-start: rgba(255,255,255,0.0);
+    background-gradient-end: rgba(255,255,255,0.2);
+    border-color: rgba(255,255,255,0.5);
+
 }
 
 .panel-launcher-add-dialog-content-box {
