--- a/Jade-1-Aqua/gnome-shell/gnome-shell.css
+++ b/Jade-1-Aqua/gnome-shell/gnome-shell.css
@@ -1140,21 +1140,11 @@ StScrollBar StButton#hhandle:active {
 #panel { 
     min-height: 32px;
     height: 32px; 
-    background-color: #414747;
+    background-color: #36434a;
     color: #ffffff;
     background-image:url("assets/traybg.png");
     background-repeat:repeat; 
     font-weight: bold; 
-    transition-timing-function: cubic-bezier(0, 0, 0.2, 1); 
-    transition-duration: 0.4s; 
-}
-
-#panel:overview, 
-#panel.unlock-screen, 
-#panel.login-screen, 
-#panel.lock-screen { 
-    background-color: rgba(19, 25, 28, 0.01); 
-    box-shadow: inset 0 2px #414747; 
     transition-timing-function: cubic-bezier(0, 0, 0.2, 1); 
     transition-duration: 0.4s; 
 }
@@ -1540,7 +1530,7 @@ StScrollBar StButton#hhandle:active {
 .calendar-day-base:active:hover, 
 .calendar-day-base:selected, 
 .calendar-day-base:selected:hover { 
-    color:#a0b9d2;
+    color:#ffffff;
     background-color:rgba(28,113,168,0.6); /* coloraccent */
     border-color:transparent;
 }
