--- a/Jade-1-Red/gnome-shell/gnome-shell.css
+++ b/Jade-1-Red/gnome-shell/gnome-shell.css
@@ -132,7 +132,7 @@ StEntry {
     border-radius: 6px; 
     border-width: 0; 
     color: #CCDDEE; 
-    selection-background-color: #bb2222; /* coloraccent */ 
+    selection-background-color: #cc3333; /* coloraccent */ 
     selected-color: #FFFFFF; 
     transition-duration: 0s; 
 }
@@ -857,13 +857,13 @@ StScrollBar StButton#hhandle:active {
 
 .popup-menu StScrollBar StButton#vhandle:hover, 
 .popup-menu StScrollBar StButton#hhandle:hover { 
-    background-color:#bb2222; /* coloraccent */
+    background-color:#cc3333; /* coloraccent */
     color:#FFF;
 }
 
 .popup-menu StScrollBar StButton#vhandle:active, 
 .popup-menu StScrollBar StButton#hhandle:active { 
-    background-color: #bb2222; /* coloraccent */
+    background-color: #cc3333; /* coloraccent */
 }
 
 .popup-menu-arrow { 
@@ -1142,21 +1142,11 @@ StScrollBar StButton#hhandle:active {
 #panel { 
     min-height: 32px;
     height: 32px; 
-    background-color: #414747;
+    background-color: #36434a;
     color: #ffffff;
     background-image:url("assets/traybg.png");
     background-repeat:repeat; 
     font-weight: bold; 
-    transition-timing-function: cubic-bezier(0, 0, 0.2, 1); 
-    transition-duration: 0.4s; 
-}
-
-#panel:overview, 
-#panel.unlock-screen, 
-#panel.login-screen, 
-#panel.lock-screen { 
-    background-color: rgba(19, 25, 28, 0.01); 
-    box-shadow: inset 0 2px #414747; 
     transition-timing-function: cubic-bezier(0, 0, 0.2, 1); 
     transition-duration: 0.4s; 
 }
@@ -1541,7 +1531,7 @@ StScrollBar StButton#hhandle:active {
 .calendar-day-base:active:hover, 
 .calendar-day-base:selected, 
 .calendar-day-base:selected:hover { 
-    color:#a0b9d2;
+    color:#ffffff;
     background-color:rgba(160,40,40,0.6); /* coloraccent */
     border-color:transparent;
 }
@@ -1605,7 +1595,7 @@ StScrollBar StButton#hhandle:active {
 .calendar-today, 
 .calendar-today.calendar-day-with-events { 
     border: none; 
-    background-color: #bb2222; /* coloraccent */
+    background-color: #cc3333; /* coloraccent */
     color: #FFFFFF; 
 }
 
@@ -1613,14 +1603,14 @@ StScrollBar StButton#hhandle:active {
 .calendar-today:focus, 
 .calendar-today.calendar-day-with-events:hover, 
 .calendar-today.calendar-day-with-events:focus { 
-    background-color: #bb2222; /* coloraccent */
+    background-color: #cc3333; /* coloraccent */
 }
 
 .calendar-today:selected, 
 .calendar-today:selected:hover, 
 .calendar-today.calendar-day-with-events:selected, 
 .calendar-today.calendar-day-with-events:selected:hover { 
-    background-color: #bb2222; /* coloraccent */ 
+    background-color: #cc3333; /* coloraccent */ 
 }
 
 .calendar-nonwork-day{
@@ -1998,14 +1988,14 @@ StScrollBar StButton#hhandle:active {
 
 .system-menu-action:hover, 
 .system-menu-action:focus { 
-    background-color: #bb2222; /* coloraccent */
+    background-color: #cc3333; /* coloraccent */
     color: #eeeeec;
     border-color:#DD3333; /* coloraccent */
     padding: 13px; 
 }
 
 .system-menu-action:active { 
-    background-color: #bb2222; /* coloraccent */
+    background-color: #cc3333; /* coloraccent */
     color: #ffffff; 
 }
 
@@ -2236,7 +2226,7 @@ notification-close {
 }
 
 .nm-dialog-item:selected { 
-    background-color:#bb2222; /* coloraccent */
+    background-color:#cc3333; /* coloraccent */
     color: #FFB0B0; /* coloraccent */
 }
 
