--- a/Jade-1-Teal/gnome-shell/gnome-shell.css
+++ b/Jade-1-Teal/gnome-shell/gnome-shell.css
@@ -132,7 +132,7 @@ StEntry {
     border-radius: 6px; 
     border-width: 0; 
     color: #CCDDEE; 
-    selection-background-color: #008170; /* coloraccent */
+    selection-background-color: #207c6f; /* coloraccent */
     selected-color: #FFFFFF; 
     transition-duration: 0s; 
 }
@@ -745,7 +745,7 @@ StScrollBar StButton#hhandle:active {
 }
 
 .popup-menu .popup-menu-item:checked:hover { 
-    background-color: rgba(0, 113, 102, 0.91); /* coloraccent */    
+    background-color: #207c6f; /* coloraccent */    
     color:#88FFEE; /* coloraccent */
 }
 
@@ -759,19 +759,19 @@ StScrollBar StButton#hhandle:active {
 }
 
 .popup-menu .popup-menu-item.selected { 
-    background-color: rgba(0, 113, 102, 0.91); /* coloraccent */
+    background-color: #207c6f; /* coloraccent */
     color: #88FFEE; /* coloraccent */
     transition-duration: 0s; 
 }
 
 .popup-menu .popup-menu-item:active { 
-    background-color: rgba(0, 113, 102, 0.91); /* coloraccent */
+    background-color: #207c6f; /* coloraccent */
     color: #88FFEE; /* coloraccent */
     transition-duration: 0.15s; 
 }
 
 .popup-menu .popup-menu-item.selected:active { 
-    background-color: rgba(0, 113, 102, 0.91); /* coloraccent */
+    background-color: #207c6f; /* coloraccent */
     color: #88FFEE; /* coloraccent */
 }
 
@@ -857,13 +857,13 @@ StScrollBar StButton#hhandle:active {
 
 .popup-menu StScrollBar StButton#vhandle:hover, 
 .popup-menu StScrollBar StButton#hhandle:hover { 
-    background-color: rgba(0, 113, 102, 0.91); /* coloraccent */
+    background-color: #207c6f; /* coloraccent */
     color:#FFF;
 }
 
 .popup-menu StScrollBar StButton#vhandle:active, 
 .popup-menu StScrollBar StButton#hhandle:active { 
-    background-color: rgba(0, 113, 102, 0.91); /* coloraccent */
+    background-color: #207c6f; /* coloraccent */
 }
 
 .popup-menu-arrow { 
@@ -1142,21 +1142,11 @@ StScrollBar StButton#hhandle:active {
 #panel { 
     min-height: 32px;
     height: 32px; 
-    background-color: #414747;
+    background-color: #36434a;
     color: #ffffff;
     background-image:url("assets/traybg.png");
     background-repeat:repeat; 
     font-weight: bold; 
-    transition-timing-function: cubic-bezier(0, 0, 0.2, 1); 
-    transition-duration: 0.4s; 
-}
-
-#panel:overview, 
-#panel.unlock-screen, 
-#panel.login-screen, 
-#panel.lock-screen { 
-    background-color: rgba(19, 25, 28, 0.01); 
-    box-shadow: inset 0 2px #414747; 
     transition-timing-function: cubic-bezier(0, 0, 0.2, 1); 
     transition-duration: 0.4s; 
 }
@@ -1217,7 +1207,7 @@ StScrollBar StButton#hhandle:active {
 #panel .panel-button:focus,
 #panel .panel-button:checked { 
     color:#ffffff;
-    background-color: rgba(0, 113, 102, 0.91); /* coloraccent */
+    background-color: #207c6f; /* coloraccent */
     box-shadow: inset 0 -1px #004f42; /* coloraccent */
 }
 
@@ -1365,7 +1355,7 @@ StScrollBar StButton#hhandle:active {
 .events-button:hover,
 .events-button:hover { 
     color: #CCDDEE; 
-    border:1px solid #008170; /* coloraccent */
+    border:1px solid #207c6f; /* coloraccent */
     background-color:rgba(5,73,65,0.5); /* coloraccent */
 }
 
@@ -1542,7 +1532,7 @@ StScrollBar StButton#hhandle:active {
 .calendar-day-base:active:hover, 
 .calendar-day-base:selected, 
 .calendar-day-base:selected:hover { 
-    color:#a0b9d2;
+    color:#ffffff;
     background-color:rgba(0,132,110,0.6); /* coloraccent */
     border-color:transparent;
 }
@@ -1606,7 +1596,7 @@ StScrollBar StButton#hhandle:active {
 .calendar-today, 
 .calendar-today.calendar-day-with-events { 
     border: none; 
-    background-color: #008170; /* coloraccent */
+    background-color: #207c6f; /* coloraccent */
     color: #FFFFFF; 
 }
 
@@ -1614,14 +1604,14 @@ StScrollBar StButton#hhandle:active {
 .calendar-today:focus, 
 .calendar-today.calendar-day-with-events:hover, 
 .calendar-today.calendar-day-with-events:focus { 
-    background-color: #008170; /* coloraccent */
+    background-color: #207c6f; /* coloraccent */
 }
 
 .calendar-today:selected, 
 .calendar-today:selected:hover, 
 .calendar-today.calendar-day-with-events:selected, 
 .calendar-today.calendar-day-with-events:selected:hover { 
-    background-color: #008170; /* coloraccent */ 
+    background-color: #207c6f; /* coloraccent */ 
 }
 
 .calendar-nonwork-day{
@@ -1672,18 +1662,18 @@ StScrollBar StButton#hhandle:active {
     padding-top: 0.45em; 
     border-radius: 4px; 
     icon-size: 16px; 
-    color: #008170;  /* coloraccent */
+    color: #207c6f;  /* coloraccent */
     background-color: transparent; 
 }
 
 .message-list-section-close:hover > StIcon, 
 .message-list-section-close:focus > StIcon { 
-    color: #008170;  /* coloraccent */
+    color: #207c6f;  /* coloraccent */
     background-color: rgba(38, 50, 56, 0.12); 
 }
 
 .message-list-section-close:active > StIcon { 
-    color: #008170;   /* coloraccent */
+    color: #207c6f;   /* coloraccent */
     background-color: rgba(38, 50, 56, 0.25); 
 }
 
@@ -1706,7 +1696,7 @@ StScrollBar StButton#hhandle:active {
 }
 .message:hover,
 .message:focus{
-    border:1px solid #008170; /* coloraccent */
+    border:1px solid #207c6f; /* coloraccent */
 }
 .message-icon-bin{
     padding:10px 0px 10px 10px
@@ -1766,21 +1756,21 @@ StScrollBar StButton#hhandle:active {
 
 .popup-menu .message:hover, 
 .popup-menu .message:focus { 
-    border:1px solid #008170; /* coloraccent */
+    border:1px solid #207c6f; /* coloraccent */
     background-color:rgba(5,73,65,0.5); /* coloraccent */
     color: #BBCCDD; 
 }
 
 .popup-menu .message:hover:ltr, 
 .popup-menu .message:focus:ltr { 
-    border:1px solid #008170; /* coloraccent */
+    border:1px solid #207c6f; /* coloraccent */
     background-color:rgba(5,73,65,0.5); /* coloraccent */
     color: #BBCCDD; 
 }
 
 .popup-menu .message:hover:rtl, 
 .popup-menu .message:focus:rtl { 
-    border:1px solid #008170; /* coloraccent */
+    border:1px solid #207c6f; /* coloraccent */
     background-color:rgba(10,142,118,0.5); /* coloraccent */
     color: #BBCCDD; 
 }
@@ -1999,14 +1989,14 @@ StScrollBar StButton#hhandle:active {
 
 .system-menu-action:hover, 
 .system-menu-action:focus { 
-    background-color: #008170; /* coloraccent */
+    background-color: #207c6f; /* coloraccent */
     color: #eeeeec;
     border-color:#18ca9e; /* coloraccent */
     padding: 13px; 
 }
 
 .system-menu-action:active { 
-    background-color: #008170; /* coloraccent */
+    background-color: #207c6f; /* coloraccent */
     color: #ffffff; 
 }
 
@@ -2237,7 +2227,7 @@ notification-close {
 }
 
 .nm-dialog-item:selected { 
-    background-color: rgba(0, 113, 102, 0.91); /* coloraccent */
+    background-color: #207c6f; /* coloraccent */
     color:#88FFEE; /* coloraccent */
 }
 
