--- a/Jade-1-Indigo/gnome-shell/gnome-shell.css
+++ b/Jade-1-Indigo/gnome-shell/gnome-shell.css
@@ -1140,21 +1140,11 @@ StScrollBar StButton#hhandle:active {
 #panel { 
     min-height: 32px;
     height: 32px; 
-    background-color: #414747;
+    background-color: #36434a;
     color: #ffffff;
     background-image:url("assets/traybg.png");
     background-repeat:repeat; 
     font-weight: bold; 
-    transition-timing-function: cubic-bezier(0, 0, 0.2, 1); 
-    transition-duration: 0.4s; 
-}
-
-#panel:overview, 
-#panel.unlock-screen, 
-#panel.login-screen, 
-#panel.lock-screen { 
-    background-color: rgba(19, 25, 28, 0.01); 
-    box-shadow: inset 0 2px #414747; 
     transition-timing-function: cubic-bezier(0, 0, 0.2, 1); 
     transition-duration: 0.4s; 
 }
@@ -1215,27 +1205,27 @@ StScrollBar StButton#hhandle:active {
 #panel .panel-button:focus,
 #panel .panel-button:checked { 
     color:#ffffff;
-    background-color:#4f5cd0; /* coloraccent */
-    box-shadow: inset 0 -1px #2d376c; /* coloraccent */
+    background-color:#3a57c9; /* coloraccent */
+    box-shadow: inset 0 -1px #3a57c9; /* coloraccent */
 }
 
 #panel .panel-button:active, 
 #panel .panel-button:overview, 
 #panel .panel-button:focus, 
 #panel .panel-button:checked {
-    box-shadow: inset 0 -1px 0 0 #2d376c; /* coloraccent */
+    box-shadow: inset 0 -1px 0 0 #3a57c9; /* coloraccent */
 }
 #panel .panel-button.clock-display:active, 
 #panel .panel-button.clock-display:overview, 
 #panel .panel-button.clock-display:focus, 
 #panel .panel-button.clock-display:checked {
-    box-shadow: inset 0 -1px 0 0 #2d376c; /* coloraccent */
+    box-shadow: inset 0 -1px 0 0 #3a57c9; /* coloraccent */
 }
 #panel .panel-button.clock-display:active .clock, 
 #panel .panel-button.clock-display:overview .clock, 
 #panel .panel-button.clock-display:focus .clock, 
 #panel .panel-button.clock-display:checked .clock {
-    box-shadow: inset 0 -1px 0 0 #2d376c; /* coloraccent */
+    box-shadow: inset 0 -1px 0 0 #3a57c9; /* coloraccent */
 }
 
 
@@ -1362,7 +1352,7 @@ StScrollBar StButton#hhandle:active {
 .events-button:hover,
 .events-button:hover { 
     color: #CCDDEE; 
-    border:1px solid #4f5cd0; /* coloraccent */
+    border:1px solid #3a57c9; /* coloraccent */
     background-color:rgba(39,53,103,0.5); /* coloraccent */
 }
 
@@ -1540,7 +1530,7 @@ StScrollBar StButton#hhandle:active {
 .calendar-day-base:active:hover, 
 .calendar-day-base:selected, 
 .calendar-day-base:selected:hover { 
-    color:#a0b9d2;
+    color:#ffffff;
     background-color:rgba(73,76,160,0.6); /* coloraccent */
     border-color:transparent;
 }
@@ -1604,7 +1594,7 @@ StScrollBar StButton#hhandle:active {
 .calendar-today, 
 .calendar-today.calendar-day-with-events { 
     border: none; 
-    background-color: #515fbb; /* coloraccent */
+    background-color: #3a57c9; /* coloraccent */
     color: #FFFFFF; 
 }
 
@@ -1612,14 +1602,14 @@ StScrollBar StButton#hhandle:active {
 .calendar-today:focus, 
 .calendar-today.calendar-day-with-events:hover, 
 .calendar-today.calendar-day-with-events:focus { 
-    background-color: #515fbb; /* coloraccent */
+    background-color: #3a57c9; /* coloraccent */
 }
 
 .calendar-today:selected, 
 .calendar-today:selected:hover, 
 .calendar-today.calendar-day-with-events:selected, 
 .calendar-today.calendar-day-with-events:selected:hover { 
-    background-color: #515fbb; /* coloraccent */ 
+    background-color: #3a57c9; /* coloraccent */ 
 }
 
 .calendar-nonwork-day{
@@ -1670,18 +1660,18 @@ StScrollBar StButton#hhandle:active {
     padding-top: 0.45em; 
     border-radius: 4px; 
     icon-size: 16px; 
-    color: #4f5cd0;  /* coloraccent */
+    color: #3a57c9;  /* coloraccent */
     background-color: transparent; 
 }
 
 .message-list-section-close:hover > StIcon, 
 .message-list-section-close:focus > StIcon { 
-    color: #4f5cd0;  /* coloraccent */
+    color: #3a57c9;  /* coloraccent */
     background-color: rgba(38, 50, 56, 0.12); 
 }
 
 .message-list-section-close:active > StIcon { 
-    color: #4f5cd0;   /* coloraccent */
+    color: #3a57c9;   /* coloraccent */
     background-color: rgba(38, 50, 56, 0.25); 
 }
 
@@ -1704,7 +1694,7 @@ StScrollBar StButton#hhandle:active {
 }
 .message:hover,
 .message:focus{
-    border:1px solid #4f5cd0; /* coloraccent */
+    border:1px solid #3a57c9; /* coloraccent */
 }
 .message-icon-bin{
     padding:10px 0px 10px 10px
@@ -1764,21 +1754,21 @@ StScrollBar StButton#hhandle:active {
 
 .popup-menu .message:hover, 
 .popup-menu .message:focus { 
-    border:1px solid #4f5cd0; /* coloraccent */
+    border:1px solid #3a57c9; /* coloraccent */
     background-color:rgba(39,53,103,0.5); /* coloraccent */
     color: #BBCCDD; 
 }
 
 .popup-menu .message:hover:ltr, 
 .popup-menu .message:focus:ltr { 
-    border:1px solid #4f5cd0; /* coloraccent */
+    border:1px solid #3a57c9; /* coloraccent */
     background-color:rgba(39,53,103,0.5); /* coloraccent */
     color: #BBCCDD; 
 }
 
 .popup-menu .message:hover:rtl, 
 .popup-menu .message:focus:rtl { 
-    border:1px solid #4f5cd0; /* coloraccent */
+    border:1px solid #3a57c9; /* coloraccent */
     background-color:rgba(117,0,153,0.5); /* coloraccent */
     color: #BBCCDD; 
 }
